[tool.poetry]
name = "scrape_youtube"
version = "0.1.0"
description = ""
authors = ["ashleysyg <ashley.syg.lee@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.5"
numpy = "^1.19.0"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
